@@ -13,6 +13,8 @@ New Features
 * SOLR-15472: New shards.preference option for preferring replicas based on their leader status, i.e.
   `shards.preference=replica.leader:false` would prefer non-leader replicas. (wei wang via Timothy Potter)
 
+* SOLR-15208: Add the countDist aggregation to the stats, facet and timeseries Streaming Expressions (Joel Bernstein)
+
 Improvements
 ---------------------
 * SOLR-15460: Implement LIKE, IS NOT NULL, IS NULL, and support wildcard * in equals string literal for Parallel SQL (Timothy Potter, Houston Putman)
